--- a/testForms.html
+++ b/testForms.html
@@ -13,7 +13,7 @@
 		document.getElementById("info").innerHTML += `${property}: ${object[property]}`;
 	}
 
-	pdf.setFont("courier", "normal", "normal");
+	pdf.setFont("Courier", "normal", "normal");
 	pdf.setFontSize(12);
 
 	pdf.text("06", 148, 7);
