--- a/testForms.html
+++ b/testForms.html
@@ -18,35 +18,32 @@
 	pdf.setFont("courier", "normal", "normal");
 
 	pdf.setFontSize(12);
-	pdf.text("06", 153, 3);
-	pdf.text("12", 161, 3);
-	pdf.text("21", 169, 3);
+	pdf.text("06", 154, 4);
+	pdf.text("12", 163, 4);
+	pdf.text("21", 171, 4);
 
 	pdf.setFontSize(10);
 	pdf.text("Jason Charles", 153, 10);
-	pdf.text("5", 201, 10);
-	pdf.text("2", 206, 10);
-	pdf.text("3", 211, 10);
-	pdf.text("2", 215, 10);
 
 	pdf.text("Gary Greenwell", 7, 44);
 	pdf.text("##########", 118, 44);
 
 	pdf.setFontSize(18);
-	pdf.text("186382", 169, 21);
+	pdf.text("186377", 169, 23);
+	pdf.text("5232", 200, 10);
 	pdf.text("X", 155, 44);
 	pdf.text("X", 192, 44);
 
 	pdf.setFontSize(10);
 	pdf.text("7528 Morningside Dr.", 7, 52);
 
-	pdf.text("X", 172, 34);
-	pdf.text("X", 192, 34);
-	pdf.text("X", 210, 34);
+	pdf.text("X", 174, 31);
+	pdf.text("X", 195, 31);
+	pdf.text("X", 214, 31);
 
-	pdf.text("X", 172, 38);
-	pdf.text("X", 192, 38);
-	pdf.text("X", 210, 38);
+	pdf.text("X", 174, 36);
+	pdf.text("X", 195, 36);
+	pdf.text("X", 214, 36);
 
 	pdf.text("Walton Hills", 7, 59);
 	pdf.text("OH", 76, 59);
@@ -59,8 +56,8 @@
 	pdf.text("OH", 176, 66);
 	pdf.text("44146", 199, 66);
 
-	pdf.text("6/12/2021", 123, 89);
-	pdf.text("6/15/2021", 9, 93);
+	pdf.text("6/12/2021", 123, 91);
+	pdf.text("6/15/2021", 9, 95);
 
 	pdf.text("Line 1 -", 7, 101);
 	pdf.text("Line 2 -", 7, 106);
@@ -76,21 +73,23 @@
 	pdf.text("Line 12 -", 7, 151);
 	pdf.text("Line 13 -", 7, 156);
 
-	pdf.text("$20,000.00", 199, 106);
+	pdf.setFontSize(8);
+	pdf.text("20,000.00", 199, 106);
 
-	pdf.text("Discount Line 1 -", 7, 173);
+	pdf.setFontSize(10);
+	pdf.text("Discount Line 1 -", 7, 174);
 	pdf.text("Discount Line 2 -", 7, 178);
-	pdf.text("Discount Line 3 -", 7, 182);
+	pdf.text("Discount Line 3 -", 7, 183);
 
-	pdf.text("$1000.00", 145, 173);
-	pdf.text("$2000.00", 145, 178);
-	pdf.text("$3000.00", 145, 182);
+	pdf.text("1000.00", 145, 174);
+	pdf.text("2000.00", 145, 178);
+	pdf.text("3000.00", 145, 183);
 
-	pdf.text("$6000.00", 186, 178);
-	pdf.text("$14,000.00", 186, 206);
+	pdf.text("6000.00", 188, 178);
+	pdf.text("14,000.00", 188, 209);
 
-	pdf.text("X", 4, 262);
-	pdf.text("This is a good reason", 4, 268);
+	pdf.text("X", 4, 269);
+	pdf.text("This is a good reason", 4, 275);
 /*
 	for(var x = 0; x < 180; x += 10)
 		for(var y = 0; y < 180; y += 10)
