--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="apple-touch-icon" href="images/apple_touch_icon.png"/>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="application/javascript" src="js/jspdf.umd.js"></script>
