Moved apple-touch-icon image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="apple-touch-icon" href="images/apple_touch_icon.png"/>
+    <link rel="apple-touch-icon" href="apple_touch_icon.png">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="application/javascript" src="js/jspdf.umd.js"></script>
     <script type="application/javascript" src="js/formify.js"></script>
@@ -406,13 +406,13 @@
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
                     <label class="customFileUpload" style="text-align:center;">
                         <input type="button" onclick="generateInvoice();" />
-                        Generate Invoice
+                        Invoice
                     </label>
                 </div>
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
                     <label class="customFileUpload" style="text-align:center;" onclick="generateInvoice();">
                         <input type="button" onclick="generateProposal();" />
-                        Generate Proposal
+                        Proposal
                     </label>
                 </div>
             </div>
