Changed onclick for invoice and proposal

--- a/index.html
+++ b/index.html
@@ -409,14 +409,14 @@
             <div id="loadFileButtonsId" class="descriptionDiv"
                  style="display:flex;flex-direction:row;justify-content: space-around;">
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;">
-                        <input type="button" onclick="generateInvoice();" />
+                    <label class="customFileUpload" style="text-align:center;" onclick="generateInvoice();">
+                        <input type="button" />
                         Invoice
                     </label>
                 </div>
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;">
-                        <input type="button" onclick="generateProposal();" />
+                    <label class="customFileUpload" style="text-align:center;" onclick="generateProposal();">
+                        <input type="button" />
                         Proposal
                     </label>
                 </div>
