--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <link rel="apple-touch-icon" href="apple_touch_icon.png">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="application/javascript" src="js/jspdf.debug.js"></script>
+    <script type="application/javascript" src="js/jspdf.umd.js"></script>
+    <script type="application/javascript" src="js/FileSaver.js"></script>
     <script type="application/javascript" src="js/formify.js"></script>
     <title>REXI</title>
 </head>
