Changed save and load function names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </label>
                 </div>
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;" onclick="loadData();">
+                    <label class="customFileUpload" style="text-align:center;" onclick="loadContractDetails();">
                         <input type="button"/>
                         Load File
                     </label>
@@ -389,7 +389,7 @@
             <div id="saveFileButtonsId" class="descriptionDiv"
                  style="display:flex;flex-direction:row;justify-content: space-around;">
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;" onclick="saveData();">
+                    <label class="customFileUpload" style="text-align:center;" onclick="saveContractDetails();">
                         <input type="button"/>
                         Save File
                     </label>
