Fixed js references

--- a/sample.html
+++ b/sample.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="../dev/workspace/rexi/js/jspdf.umd.js"></script>
-    <script type="application/javascript" src="../dev/workspace/rexi/js/FileSaver.js"></script>
-    <script type="application/javascript" src="../dev/workspace/rexi/js/jszip.js"></script>
+    <script type="application/javascript" src="js/jspdf.umd.js"></script>
+    <script type="application/javascript" src="js/FileSaver.js"></script>
+    <script type="application/javascript" src="js/jszip.js"></script>
 </head>
 <body>
 <script>
