--- a/sample.html
+++ b/sample.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Title</title>
     <script type="application/javascript" src="js/jspdf.umd.js"></script>
     <script type="application/javascript" src="js/FileSaver.js"></script>
@@ -58,6 +59,6 @@
 </script>
 
 <body>
-    <input type="button" name="Push" value="Push" onclick="generateAll();">
+    <input type="button" name="Push" value="Push" onclick="generateAll();" style="width:100%">
 </body>
 </html>
