Added page reload

--- a/sample.html
+++ b/sample.html
@@ -83,6 +83,7 @@
         radioTwo.checked = false;
         radioThree.checked = false;
         pushButton.disabled = true;
+        location.reload();
     }
 
     function enableButton()
