Fixed saved button

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div id="saveFileButtonsId" class="descriptionDiv"
                  style="display:flex;flex-direction:row;justify-content: space-around;">
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;" onclick="saveAllDetails();">
+                    <label class="customFileUpload" style="text-align:center;" onclick="saveContractDetails();">
                         <input type="button"/>
                         Save File
                     </label>
@@ -415,7 +415,7 @@
                     </label>
                 </div>
                 <div style="display:flex;flex-direction:column;width:50%;padding:1px;">
-                    <label class="customFileUpload" style="text-align:center;">
+                    <label class="customFileUpload" style="text-align:center;" >
                         <input id="proposalButton" type="button" onClick="generateProposal();" />
                         Proposal
                     </label>
