Fixed JS reference

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="apple-touch-icon" href="apple_touch_icon.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="application/javascript" src="js/jspdf.umd.js"></script>
-    <script type="application/javascript" src="js/formify-2.0.js"></script>
+    <script type="application/javascript" src="js/formify.js"></script>
     <title>REXI</title>
 </head>
 <body>
