Temporarily hid iOS device support

--- a/index.html
+++ b/index.html
@@ -383,16 +383,16 @@
             <span class="headerSpan">Generate Links</span>
         </div>
         <div id="saveFileContentId" class="contentDiv">
-            <div id="iosDeviceDivId" class="labelDiv">
+            <div id="iosDeviceDivId" class="labelDiv" style="display:none;">
                 <div style="display:flex;flex-direction:column;width:100%;padding:1px;">
                     <label id="osDeviceLabelId" for="iosDevice" style="color:#666;">
                         <input id="iosDevice" type="checkbox">
                         iOS Device Printing Support
                     </label>
                 </div>
+                <hr>
             </div>
             <div id="saveFileDeescriptionId" class="descriptionDiv">
-                <hr>
                 Press the <i><b>Generate Links</b></i> button to create download links for this contract.<br><br>
             </div>
             <div id="saveFileButtonsId" class="descriptionDiv"
@@ -434,7 +434,7 @@
 
     <div id="copySectionId" class="sectionDiv">
         <div class="copyDiv">
-            Copyright &copy; 2021 - MonB Development - All Rights Reserved v1.1
+            Copyright &copy; 2021 - MonB Development - All Rights Reserved v1.2
         </div>
     </div>
 </div>
